cmake_minimum_required(VERSION 3.26)
project(Assignment)

set(CMAKE_CXX_STANDARD 14)

add_executable(Assignment
        L1
        L10
        L11
        L12
        L13
        L14
        L15
        L16
        L17
        L18
        L19
        L2
        L20
        L21
        L22
        L23
        L24
        L25
        L26
        L27
        L28
        L29
        L3
        "L30(i)"
        "L30(ii)"
        L31
        L32
        L33
        L34
        L35
        L36
        L37
        L38
        L39
        L4
        L40
        L41
        L42
        L43
        L44
        L5
        L6
        L7
        L8
        L9
        README.md
        T1
        T10
        T11
        T12
        T13
        T2
        T3
        T4
        T5
        T6
        T7
        T8
        T9
        T.1.cpp)
